--- a/client/angular.json
+++ b/client/angular.json
@@ -63,6 +63,10 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+           
+            "sslKey" : "./ssl/server.Key",
+            "sslCert" : "./ssl/server.crt",
+            "ssl": true,
             "browserTarget": "client:build"
           },
           "configurations": {
